--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Assigment | Revou | Bagas Nuryaman</title>
 </head>
 <body>
-    
+    <main>
+      <header>
+        <h1>Kalkulator BMI</h1>
+      </header>
+    </main>
 </body>
 </html>
